# ai_engineering_learning

./: README.md  pyproject.toml
docs/: 2_日常 uv 及 Git 操作流程.md  3_提升词模板.md
knowledge_lab/: README.md
knowledge_lab/python/dict/: 1_dict_basics.py  2_dict_merge.py  3_dict_special.py  README.md
knowledge_lab/python/json.dumps/: 1_dumps_basics.py  2_dumps_default.py  README.md
knowledge_lab/python/json.loads/: 1_loads_basics.py  2_loads_hooks.py  3_loads_parsers.py  README.md
knowledge_lab/python/try-except/: 1_try_except_basics.py  2_exception_hierarchy.py  3_raise_and_custom.py  README.md
src/1_模型调用/: 1_基础调用.py  2_模拟http-post请求.py  3_query方式调用.py
temp/: j1.json
