[project]
name = "langchain-learning-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
]
